frontend/test/should_fail/index_exec_node_countFromIndexSame_index2_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	{ i:int=countNodesFromIndexSame(bari, j) }
}